fix: make grid adaptive (not responsive, unfortunately)

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,6 +1,8 @@
 .cards {
   max-width: calc(100% - (200px * 2));
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 @media screen and (max-width: 1140px) {
