--- a/blocks/grid-elements/grid-elements.css
+++ b/blocks/grid-elements/grid-elements.css
@@ -1,6 +1,6 @@
 .grid-elements {
   list-style-type: none;
-  max-width: 100%;
+  min-width: 880px;
   margin: 0;
   padding: 0;
   display: grid;
@@ -15,6 +15,8 @@
 
 @media screen and (max-width: 1140px) {
   .grid-elements {
+    min-width: 0;
+    max-width: 100%;
     grid-template-columns: repeat(auto-fit, minmax(270px, 300px));
   }
 }
